test/org/midica/testfiles/failing/eff-flow-double-with-params.midica
INCLUDE inc/instruments.midica


0: vol.double().set(50)
